--- a/components/InputBox.module.css
+++ b/components/InputBox.module.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 10px;
+    border-top: 1px solid rgb(225, 225, 225);
   }
   
   .msgInput{
@@ -12,12 +13,29 @@
     height: 100%;
     padding: 10px;
     border: none;
-    border-top: 1px solid rgb(225, 225, 225);
     border-radius: 0;
   }
   
   .msgInput:focus{
     outline: none;
+  }
+
+  .sendButton{
+    border: 0;
+    background-color: transparent;
+    outline: none;
+    height: 100%;
+    padding: 10px;
+  }
+
+  .sendButton:disabled{
+    opacity: 0.5;
+  }
+
+  .sendButton img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
   }
 
   @media only screen and (max-width: 760px) {
