--- a/components/InputBox.module.css
+++ b/components/InputBox.module.css
@@ -1,6 +1,6 @@
 .inputBox{
     width: 700px;
-    height: 70px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,11 +21,29 @@
   }
 
   .sendButton{
-    border: 0;
-    background-color: transparent;
-    outline: none;
+    
+    border: none;
+    margin: 0;
+    padding:13px;
+    width: auto;
     height: 100%;
-    padding: 13px;
+    overflow: visible;
+
+    background: inherit;
+
+    /* inherit font & color from ancestor */
+    color: inherit;
+    font: inherit;
+
+    /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+    line-height: normal;
+
+    /* Corrects font smoothing for webkit */
+    -webkit-font-smoothing: inherit;
+    -moz-osx-font-smoothing: inherit;
+
+    /* Corrects inability to style clickable `input` types in iOS */
+    -webkit-appearance: none;
   }
 
   .sendButton:disabled{
@@ -33,6 +51,7 @@
   }
 
   .sendButton img{
+    
     object-fit: contain;
     width: 100%;
     height: 100%;
